--- a/contact-us.html
+++ b/contact-us.html
@@ -10,11 +10,11 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 
-    <title>SLSALAH - Our Gallery</title>
+    <title>SLSALAH - Contact US</title>
 </head>
 
 <body>
-    <section id="header" class="gallery-bg">
+    <section id="header" class="caontact-us-bg">
         <div class="container">
             <div class="social-media">
                 <div class="row justify-content-between">
@@ -75,13 +75,13 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="gallery.html">معرض الأعمال</a>
+                            <a class="nav-link" href="gallery.html">معرض الأعمال</a>
                         </li>
                         <li class=" nav-item">
                             <a class="nav-link" href="#">المدونة</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact-us.html">اتصل بنا</a>
+                            <a class="nav-link active" href="contact-us.html">اتصل بنا</a>
                         </li>
                         <a class="nav-link d-block d-lg-none" href="#">
                             <button class="ask-request">اطلب استشارة</button>
@@ -99,64 +99,55 @@
                 </a>
             </nav>
             <div class="headerContent">
-                <h1>معرض الأعمال</h1>
+                <h1>اتصل بنا</h1>
             </div>
         </div>
     </section>
 
-    <section id="our-gallery">
+    <section id="contact-us">
         <div class="container">
-            <div class="filter-text">
-                <span class="active">تسويق</span>
-                <span>تصميم</span>
-                <span>محاسبة</span>
-                <span>تحليل</span>
-                <span>أعمال</span>
-                <span>منوع</span>
-                <span>أخبار</span>
-            </div>
-            <div class="main-block-gallery">
-                <div class="gallery-block">
-                    <figure>
-                        <img src="imgs/gallery-1.png" class="img-fluid" alt="gallery">
-                    </figure>
-                    <div class="gallery-block-content">
-                        <span>تصميم، تسويق، برمجة</span>
-                        <h3>شركة الغامدي للمقاولات</h3>
-                        <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
-                            التقنية والتسويقية والمتابعة
-                            الدورية.</p>
+            <div class="row align-items-center g-5">
+                <div class="col-lg-6 col-12">
+                    <div class="contact-us-block">
+                        <h3>اتصل بنا</h3>
+                        <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى
+                        </p>
+                        <form action="">
+                            <input type="text" class="form-control" placeholder="الاسم*">
+                            <input type="email" class="form-control" placeholder="البريد الالكتروني*">
+                            <input type="number" class="form-control" placeholder="رقم الجوال*">
+                            <textarea name="" id="" cols="30" rows="10" class="form-control"
+                                placeholder="الشرح*"></textarea>
+                            <input type="submit" value="ارسال" class="form-control">
+                        </form>
+                        <div class="d-flex gap-5 flex-wrap">
+                            <div>
+                                <a href="mailto:info@gmail.com" class="d-flex align-items-center">
+                                    <img src="imgs/icons/mail-dark.svg" alt="mail-icon" class="img-fluid">
+                                    <div class="d-flex flex-column">
+                                        <span class="main-title">البريد الالكتروني</span>
+                                        <span class="child-title">info@gmail.com</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div>
+                                <a href="tel:+966023114564" class="d-flex align-items-center">
+                                    <img src="imgs/icons/phone-dark.svg" alt="phone-icon" class="img-fluid">
+                                    <div class="d-flex flex-column">
+                                        <span class="main-title">الجوال</span>
+                                        <span class="child-title">0966 4564 641 22</span>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="gallery-block active">
-                    <figure class="d-lg-none d-block">
-                        <img src="imgs/gallery-1.png" class="img-fluid" alt="gallery">
-                    </figure>
-                    <div class="gallery-block-content">
-                        <span>تصميم، تسويق، برمجة</span>
-                        <h3>شركة الغامدي للمقاولات</h3>
-                        <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
-                            التقنية والتسويقية
-                            والمتابعة
-                            الدورية.</p>
-                    </div>
-                    <figure class="d-lg-block d-none">
-                        <img src="imgs/gallery-1.png" class="img-fluid" alt="gallery">
-                    </figure>
+                <div class="col-lg-6 col-12">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3625.0086842309224!2d46.6332502!3d24.6922282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f1d00bf0a7f2f%3A0x8f3fa3832e3ec787!2z2YTZitiz2YYg2YHYp9mE2Yo!5e0!3m2!1sar!2ssa!4v1696821324682!5m2!1sar!2ssa"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="gallery-block">
-                    <figure>
-                        <img src="imgs/gallery-1.png" class="img-fluid" alt="gallery">
-                    </figure>
-                    <div class="gallery-block-content">
-                        <span>تصميم، تسويق، برمجة</span>
-                        <h3>شركة الغامدي للمقاولات</h3>
-                        <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
-                            التقنية والتسويقية والمتابعة
-                            الدورية.</p>
-                    </div>
-                </div>
-                <button>المزيد</button>
             </div>
         </div>
     </section>
