--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SLSALAH</title>
+    <title>SLSALAH - HOME</title>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css"
         integrity="sha512-oAvZuuYVzkcTc2dH5z1ZJup5OmSQ000qlfRvuoTTiyTBjwX1faoyearj8KdMq0LgsBTHMrRuMek7s+CxF8yE+w=="
@@ -87,7 +87,7 @@
                             <a class="nav-link" href="#">المدونة</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">اتصل بنا</a>
+                            <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                         </li>
                         <a class="nav-link d-block d-lg-none" href="#">
                             <button class="ask-request">اطلب استشارة</button>
@@ -114,7 +114,7 @@
     <section id="video">
         <div class="container">
             <div class="row mx-auto col-md-8">
-                <h3>تعرف على سلسلة بفيديو</h3>
+                <h3>تعرف على <span class="main-color">سلسلة</span> بفيديو</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
                     tristique,
@@ -344,62 +344,105 @@
 
     <section id="testimonial">
         <div class="container">
-            <h3>تعرف على خبراء سلسلة</h3>
+            <h3>تعرف على خبراء <span class="main-color">سلسلة</span></h3>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="imgs/testimonial-2.png" alt="testimonial-1" class="img-fluid">
+                        <div class="info">
+                            <span class="name">أ. ليلى بنت معيض</span>
+                            <span class="job">● مستشارة اقتصادية ومطورة أعمال</span>
+                            <p class="desc">
+                                مؤسسة شركة خبراء سلسلة للاستشارات وحلول الأعمال و
+                                مؤسسة منصة سلسلة لتخطيط الأعمال
+
+                            </p>
+                        </div>
+                    </div>
                     <div class="swiper-slide">
                         <img src="imgs/testimonial-1.png" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">أ. مصطفى حسن</span>
-                            <span class="job">Senior Front-end Developer</span>
-                            <p class="desc">Worem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate
-                                libero et velit
-                                interdum, ac aliquet odio
-                                mattis.</p>
+                            <span class="job">مستشار اقتصادي</span>
+                            <p class="desc">
+                                متخصص في دراسات الجدوى الاقتصادية
+                            </p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <img src="imgs/testimonial-2.png" alt="testimonial-1" class="img-fluid">
                         <div class="info">
-                            <span class="name">د.راما</span>
-                            <span class="job">Senior Front-end Developer</span>
-                            <p class="desc">Worem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate
-                                libero et velit
-                                interdum, ac aliquet odio
-                                mattis.</p>
+                            <span class="name">أ. فاطمة مطاوع</span>
+                            <span class="job">مستشارة مالية وإدارية</span>
+                            <p class="desc">
+                                خبيرة التحليل والتخطيط المالي والمحاسبي والخدمات المالية و
+                                مساهمة في تأسيس نظام سلسلة لتخطيط الأعمال
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/testimonial-1.png" alt="testimonial-1" class="img-fluid">
+                        <div class="info">
+                            <span class="name">د. عبد الله الحسيني</span>
+                            <span class="job">مستشار ومراجع محاسبي</span>
+                            <p class="desc">
+                                خبير حوكمة وتأسيس شركات
+                            </p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/testimonial-2.png" alt="testimonial-1" class="img-fluid">
+                        <div class="info">
+                            <span class="name">أ. شادية المصري</span>
+                            <span class="job"> مستشارة ومقيّمة معتمدة في إدارة الابتكار المؤسسي وتطبيقات
+                                الاستدامة</span>
+                            <p class="desc">
+                                باحثة في مجال الابتكار والريادة المجتمعية.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/testimonial-1.png" alt="testimonial-1" class="img-fluid">
+                        <div class="info">
+                            <span class="name">د. أحمد الديب</span>
+                            <span class="job">مستشار الموارد البشرية</span>
+                            <p class="desc">
+                                متخصص إعداد الهياكل التنظيمية للمشاريع والشركات و
+                                متخصص خدمات تخطيط القوى العاملة والاستقطاب والتوظيف
+
+                            </p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <img src="imgs/testimonial-3.png" alt="testimonial-1" class="img-fluid">
                         <div class="info">
-                            <span class="name">أ. يحيى</span>
-                            <span class="job">Senior Front-end Developer</span>
-                            <p class="desc">Worem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate
-                                libero et velit
-                                interdum, ac aliquet odio
-                                mattis.</p>
+                            <span class="name">المحامي فهد القحطاني</span>
+                            <span class="job"> مستشار قانوني</span>
+                            <p class="desc">
+                                مستشار قانوني.
+
+                            </p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <img src="imgs/testimonial-1.png" alt="testimonial-1" class="img-fluid">
                         <div class="info">
-                            <span class="name">أ مصطفى حسن</span>
-                            <span class="job">Senior Front-end Developer</span>
-                            <p class="desc">Worem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate
-                                libero et velit
-                                interdum, ac aliquet odio
-                                mattis.</p>
+                            <span class="name">المحامي أسامة جبر</span>
+                            <span class="job">مستشار صياغة اللوائح والإجراءات والسياسات التنظيمية.</span>
+                            <p class="desc">
+                                مستشار صياغة اللوائح والإجراءات والسياسات التنظيمية.
+                            </p>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-1.png" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/testimonial-3.png" alt="testimonial-1" class="img-fluid">
                         <div class="info">
-                            <span class="name">أ مصطفى حسن</span>
-                            <span class="job">Senior Front-end Developer</span>
-                            <p class="desc">Worem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate
-                                libero et velit
-                                interdum, ac aliquet odio
-                                mattis.</p>
+                            <span class="name">أ. عبد الرحمن سليمان</span>
+                            <span class="job">مستشار ومحلل استثماري</span>
+                            <p class="desc">
+                                متخصص تقييم شركات و متخصص تحليل الأسواق المالية وصناديق الاستثمار ودراسة مخاطر السوق.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -413,12 +456,17 @@
         <div class="container">
             <h3 class="mb-5">منصة سلسلة لتخطيط الأعمال</h3>
             <div class="row align-items-center gap-5">
-                <div class="col-md-6 col-12">
-                    <figure>
-                        <img src="imgs/planning.png" class="img-fluid" alt="planning">
+                <div class="col-lg-6 col-12 h-100">
+                    <figure class="mb-md-5 mb-lg-0">
+                        <img src="imgs/planning.png" class="img-fluid one" alt="planning">
+                        <img src="imgs/planning.png" class="img-fluid two" alt="planning">
+                        <img src="imgs/planning.png" class="img-fluid three" alt="planning">
+                        <img src="imgs/planning.png" class="img-fluid four" alt="planning">
+                        <img src="imgs/planning.png" class="img-fluid five" alt="planning">
+
                     </figure>
                 </div>
-                <div class="col-md-5 col-12">
+                <div class="col-lg-5 col-12">
                     <p>كل ما تحتاجه لإنجاز وتخطيط أعمالك في منصة واحدة فقط، سارع وسجل في المنصة الآن لتحصل على كافة
                         المميزات المتاحة داخل
                         المنصة</p>
@@ -429,7 +477,7 @@
     </section>
     <section id="portfolio">
         <div class="container">
-            <h3>تعرف على معرض أعمال سلسلة</h3>
+            <h3>تعرف على معرض أعمال <span class="main-color">سلسلة</span></h3>
             <div class="row gap-0">
                 <div class="col-lg-4 col-md-6 col-12 ">
                     <figure>
@@ -483,11 +531,12 @@
                     </figure>
                 </div>
             </div>
+            <button>المزيد</button>
         </div>
     </section>
     <section id="carousel">
         <div class="container">
-            <h3>بكل فخر عملاء سلسلة</h3>
+            <h3>بكل فخر عملاء <span class="main-color">سلسلة</span></h3>
             <div class="swiper mySwiper2">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
