--- a/who-we-ara.html
+++ b/who-we-ara.html
@@ -81,7 +81,7 @@
                             <a class="nav-link" href="#">المدونة</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">اتصل بنا</a>
+                            <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                         </li>
                         <a class="nav-link d-block d-lg-none" href="#">
                             <button class="ask-request">اطلب استشارة</button>
