Uploads Services Section

--- a/financial consulting.html
+++ b/financial consulting.html
@@ -10,11 +10,11 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 
-    <title>SLSALAH - Contact US</title>
+    <title>سلسلة - الاستشارات والحلول الإدارية و المالية</title>
 </head>
 
 <body>
-    <section id="header" class="caontact-us-bg">
+    <section id="header" class="financial-consulting-bg">
         <div class="container">
             <div class="social-media">
                 <div class="row justify-content-between">
@@ -61,12 +61,12 @@
                             <a class="nav-link" href="who-we-ara.html">من نحن</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 الخدمات
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="financial consulting.html">الاستشارات والحلول
+                                <li><a class="dropdown-item active" href="financial consulting.html">الاستشارات والحلول
                                         الإدارية و المالية</a></li>
                                 <li><a class="dropdown-item" href="legal advice.html">الاستشارات والحلول القانونية</a>
                                 </li>
@@ -88,7 +88,7 @@
                             <a class="nav-link" href="#">المدونة</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="contact-us.html">اتصل بنا</a>
+                            <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                         </li>
                         <a class="nav-link d-block d-lg-none" href="#">
                             <button class="ask-request">اطلب استشارة</button>
@@ -106,57 +106,96 @@
                 </a>
             </nav>
             <div class="headerContent">
-                <h1>اتصل بنا</h1>
+                <h1>الاستشارات والحلول الإدارية و المالية</h1>
             </div>
         </div>
     </section>
 
-    <section id="contact-us">
+    <section id="more-about-us">
         <div class="container">
-            <div class="row align-items-center g-0 g-md-5">
-                <div class="col-lg-6 col-12">
-                    <div class="contact-us-block">
-                        <h3>اتصل بنا</h3>
-                        <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى
-                        </p>
-                        <form action="">
-                            <input type="text" class="form-control" placeholder="الاسم*">
-                            <input type="email" class="form-control" placeholder="البريد الالكتروني*">
-                            <input type="number" class="form-control" placeholder="رقم الجوال*">
-                            <textarea name="" id="" cols="30" rows="10" class="form-control"
-                                placeholder="الشرح*"></textarea>
-                            <input type="submit" value="ارسال" class="form-control">
-                        </form>
-                        <div class="d-flex gap-5 flex-wrap">
-                            <div>
-                                <a href="mailto:info@gmail.com" class="d-flex align-items-center">
-                                    <img src="imgs/icons/mail-dark.svg" alt="mail-icon" class="img-fluid">
-                                    <div class="d-flex flex-column">
-                                        <span class="main-title">البريد الالكتروني</span>
-                                        <span class="child-title">info@gmail.com</span>
-                                    </div>
-                                </a>
-                            </div>
-                            <div>
-                                <a href="tel:+966023114564" class="d-flex align-items-center">
-                                    <img src="imgs/icons/phone-dark.svg" alt="phone-icon" class="img-fluid">
-                                    <div class="d-flex flex-column">
-                                        <span class="main-title">الجوال</span>
-                                        <span class="child-title">0966 4564 641 22</span>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+            <div class="more-about-us-block">
+                <p class="mb-5 mb-lg-0">
+                    نحن في مكتب سلسلة للاستشارات نقدم مجموعة واسعة من الاستشارات والحلول الإدارية والمالية للشركات
+                    وروَاد الأعمال وأصحاب
+                    المشاريع والمنشآت في المملكة العربية السعودية. نحن نسعى جاهدين لتحسين أداء الشركات وتطوير
+                    استراتيجيات النجاح.
+                </p>
+                <img src="imgs/service-img-1.webp" class="img-fluid avatar service-img-1" alt="img">
+            </div>
+        </div>
+    </section>
+
+    <section id="our-services">
+        <div class="container">
+            <h3>تتضمن خدماتنا:</h3>
+            <div class="d-flex flex-wrap justify-content-center gap-4">
+                <div class="service-block">
+                    <img src="imgs/icons/light-persons.svg" class="img-fluid" alt="icon">
+                    <p>تصميم وتطبيق الأنظمة المالية والمحاسبية.</p>
                 </div>
-                <div class="col-lg-6 col-12">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3625.0086842309224!2d46.6332502!3d24.6922282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f1d00bf0a7f2f%3A0x8f3fa3832e3ec787!2z2YTZitiz2YYg2YHYp9mE2Yo!5e0!3m2!1sar!2ssa!4v1696821324682!5m2!1sar!2ssa"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                <div class="service-block">
+                    <img src="imgs/icons/check.svg" class="img-fluid" alt="icon">
+                    <p>وضع السياسات والإجراءات المالية والمحاسبية.</p>
+                </div>
+
+                <div class="service-block">
+                    <img src="imgs/icons/check.svg" class="img-fluid" alt="icon">
+                    <p>وضع السياسات والإجراءات المالية والمحاسبية.</p>
+                </div>
+
+                <div class="service-block">
+                    <img src="imgs/icons/pen.svg" class="img-fluid" alt="icon">
+                    <p>التدقيق والمراجعة المالية.</p>
+                </div>
+
+                <div class="service-block">
+                    <img src="imgs/icons/question.svg" class="img-fluid" alt="icon">
+                    <p>المشورة في التخطيط الإداري والمالي.</p>
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="our-importent">
+        <div class="container">
+            <div class="row align-items-center">
+                <figure class="col-lg-6">
+                    <img src="imgs/skills.jpg" class="img-fluid" alt="img">
+                </figure>
+                <div class="our-importent-content col-lg-6">
+                    <h4>نهتم بتقديم حلول مبتكرة ومتكاملة</h4>
+                    <p>تلبي احتياجات شركتك وتساهم في تحقيق الشفافية والتحكم المالي. نحن نعتمد على المعايير الدولية ونقدم
+                        استشارات متخصصة لتحسين
+                        التخطيط الإداري والمالي وتحقيق النمو المستدام.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="cta">
+        <div class="container">
+            <div class="row">
+                <div>
+                    <h3>في مكتب سلسلة للاستشارات</h3>
+                    <p>نحرص على تحقيق أفضل النتائج لعملائنا من خلال الاستفادة من البيانات والتحليلات لتحسين الأداء
+                        وتحقيق عائد استثمار إيجابي.
+                        نعمل بروح الفريق ونولي أهمية كبيرة للتواصل الفعال والتعاون مع عملائنا.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="cta-2">
+        <div class="container">
+            <div class="text-center">
+                <p>
+                    إذا كنت تبحث عن استشارات إدارية ومالية متخصصة في المملكة العربية السعودية، فنحن في مكتب سلسلة
+                    للاستشارات هنا لمساعدتك في
+                    تحقيق أهدافك ونجاحك المستقبلي. اتصل بنا اليوم لمناقشة احتياجاتك وبدء رحلة التطوير والنمو معنا.
+                </p>
+                <button>اتصل بنا</button>
+            </div>
     </section>
 
     <footer>
