--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
                                 الخدمات
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="financial consulting.html">الاستشارات والحلول الإدارية و المالية</a></li>
+                                <li><a class="dropdown-item" href="legal advice.html">الاستشارات والحلول القانونية</a></li>
+                                <li><a class="dropdown-item" href="human consulting.html">استشارات الموارد البشرية</a></li>
+                                <li><a class="dropdown-item" href="technical consulting.html">الاستشارات والحلول التقنية</a></li>
+                                <li><a class="dropdown-item" href="marketing consulting.html">الاستشارات والحلول التسويقية</a></li>
+                                <li><a class="dropdown-item" href="marketing services.html">الخدمات التسويقية</a></li>
+                                <li><a class="dropdown-item" href="advertising services.html">خدمات التصميم والحملات الإعلانية</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
