--- a/legal advice.html
+++ b/legal advice.html
@@ -10,11 +10,11 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 
-    <title>SLSALAH - Contact US</title>
+    <title>سلسلة - الاستشارات والحلول الإدارية و المالية</title>
 </head>
 
 <body>
-    <section id="header" class="caontact-us-bg">
+    <section id="header" class="legal-advice-bg">
         <div class="container">
             <div class="social-media">
                 <div class="row justify-content-between">
@@ -61,14 +61,15 @@
                             <a class="nav-link" href="who-we-ara.html">من نحن</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 الخدمات
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="financial consulting.html">الاستشارات والحلول
                                         الإدارية و المالية</a></li>
-                                <li><a class="dropdown-item" href="legal advice.html">الاستشارات والحلول القانونية</a>
+                                <li><a class="dropdown-item active" href="legal advice.html">الاستشارات والحلول
+                                        القانونية</a>
                                 </li>
                                 <li><a class="dropdown-item" href="human consulting.html">استشارات الموارد البشرية</a>
                                 </li>
@@ -88,7 +89,7 @@
                             <a class="nav-link" href="#">المدونة</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="contact-us.html">اتصل بنا</a>
+                            <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                         </li>
                         <a class="nav-link d-block d-lg-none" href="#">
                             <button class="ask-request">اطلب استشارة</button>
@@ -106,55 +107,94 @@
                 </a>
             </nav>
             <div class="headerContent">
-                <h1>اتصل بنا</h1>
+                <h1>الاستشارات والحلول القانونية</h1>
             </div>
         </div>
     </section>
 
-    <section id="contact-us">
+    <section id="another-cta" class="another-cta">
         <div class="container">
-            <div class="row align-items-center g-0 g-md-5">
-                <div class="col-lg-6 col-12">
-                    <div class="contact-us-block">
-                        <h3>اتصل بنا</h3>
-                        <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى
-                        </p>
-                        <form action="">
-                            <input type="text" class="form-control" placeholder="الاسم*">
-                            <input type="email" class="form-control" placeholder="البريد الالكتروني*">
-                            <input type="number" class="form-control" placeholder="رقم الجوال*">
-                            <textarea name="" id="" cols="30" rows="10" class="form-control"
-                                placeholder="الشرح*"></textarea>
-                            <input type="submit" value="ارسال" class="form-control">
-                        </form>
-                        <div class="d-flex gap-5 flex-wrap">
-                            <div>
-                                <a href="mailto:info@gmail.com" class="d-flex align-items-center">
-                                    <img src="imgs/icons/mail-dark.svg" alt="mail-icon" class="img-fluid">
-                                    <div class="d-flex flex-column">
-                                        <span class="main-title">البريد الالكتروني</span>
-                                        <span class="child-title">info@gmail.com</span>
-                                    </div>
-                                </a>
-                            </div>
-                            <div>
-                                <a href="tel:+966023114564" class="d-flex align-items-center">
-                                    <img src="imgs/icons/phone-dark.svg" alt="phone-icon" class="img-fluid">
-                                    <div class="d-flex flex-column">
-                                        <span class="main-title">الجوال</span>
-                                        <span class="child-title">0966 4564 641 22</span>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+            <div class="row align-items-center text-center">
+                <div>
+                    <h4 class="text-center another-cta-text">هل تبحث عن استشارات وحلول قانونية موثوقة؟</h4>
+                    <p class="another-cta-text">
+                        نحن هنا لمساعدتك في جميع الأمور القانونية المتعلقة بتأسيس وإدارة شركتك في المملكة العربية
+                        السعودية.
+                    </p>
                 </div>
-                <div class="col-lg-6 col-12">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3625.0086842309224!2d46.6332502!3d24.6922282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f1d00bf0a7f2f%3A0x8f3fa3832e3ec787!2z2YTZitiz2YYg2YHYp9mE2Yo!5e0!3m2!1sar!2ssa!4v1696821324682!5m2!1sar!2ssa"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </section>
+
+    <section id="more-info">
+        <div class="container">
+            <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
+                <figure>
+                    <img src="imgs/legale-img-1.png" class="img-fluid" alt="img">
+                </figure>
+                <div>
+                    <p>نقدم خدمات استشارية شاملة تشمل اختيار الشكل القانوني المناسب لشركتك، إعداد اللوائح الداخلية وعقود
+                        التأسيس، والمساعدة في
+                        إكمال إجراءات التسجيل والحصول على التراخيص اللازمة لبدء العمل.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="more-info" class="more-info-2">
+        <div class="container">
+            <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
+                <figure class="d-lg-none d-block">
+                    <img src="imgs/legale-img-2.png" class="img-fluid" alt="img">
+                </figure>
+                <div>
+                    <p>
+                        نقدم أيضاً المشورة فيما يتعلق بحماية حقوق الملكية الفكرية والابتكار، ومراجعة العقود والاتفاقيات
+                        لضمان الامتثال القانوني
+                        وحماية مصالح شركتك. بالإضافة إلى ذلك، نقدم الدعم القانوني في حالة وجود قضايا قانونية أو عمليات
+                        اندماج واستحواذ. 
+                    </p>
+                </div>
+                <figure class="d-none d-lg-block">
+                    <img src="imgs/legale-img-2.png" class="img-fluid" alt="img">
+                </figure>
+            </div>
+        </div>
+    </section>
+
+    <section id="more-info" class="more-info-3">
+        <div class="container">
+            <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
+                <figure>
+                    <img src="imgs/legale-img-1.png" class="img-fluid" alt="img">
+                </figure>
+                <div>
+                    <p>
+                        اعتمد على خبرتنا في تقديم المشورة القانونية لمجلس الإدارة وتحديث اللوائح الداخلية بانتظام للتأكد
+                        من التوافق مع التطورات
+                        القانونية الحالية. 
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="more-info" class="more-info-2">
+        <div class="container">
+            <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
+                <figure class="d-lg-none d-block">
+                    <img src="imgs/legale-img-4.png" class="img-fluid" alt="img">
+                </figure>
+                <div>
+                    <p>
+                        إذا كنت تدير متجرًا إلكترونيًا، سلسلة موجودة لمساعدتك في صياغة العقود واللوائح، والتسجيل
+                        والترخيص، وصياغة سياسات
+                        الخصوصية والشروط والأحكام والاسترجاع والاستبدال.
+                    </p>
+                </div>
+                <figure class="d-lg-block d-none">
+                    <img src="imgs/legale-img-4.png" class="img-fluid" alt="img">
+                </figure>
             </div>
         </div>
     </section>
