--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 
-    <title>SLSALAH - Our Gallery</title>
+    <title>سلسلة - معرض الأعمال</title>
 </head>
 
 <body>
