--- a/human consulting.html
+++ b/human consulting.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 
-    <title>سلسلة - الاستشارات والحلول الإدارية و المالية</title>
+    <title>سلسلة - استشارات الموارد البشرية</title>
 </head>
 
 <body>
@@ -166,6 +166,7 @@
             </div>
         </div>
     </section>
+
     <section id="our-services">
         <div class="container">
             <h3>تتضمن خدماتنا:</h3>
