--- a/legal advice.html
+++ b/legal advice.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 
-    <title>سلسلة - الاستشارات والحلول الإدارية و المالية</title>
+    <title>سلسلة - الاستشارات والحلول القانونية</title>
 </head>
 
 <body>
