--- a/who-we-ara.html
+++ b/who-we-ara.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 
-    <title>SLSALAH - Who We Are</title>
+    <title>سلسلة - من نحن</title>
 </head>
 
 <body>
