Add All Services section with out sliders

--- a/gallery.html
+++ b/gallery.html
@@ -187,10 +187,10 @@
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
-                            <li><a href="">الصفحة الرئيسية</a></li>
-                            <li><a href="">من نحن</a></li>
-                            <li><a href="">المدونة</a></li>
-                            <li><a href="">اتصل بنا</a></li>
+                            <li><a href="index.html">الصفحة الرئيسية</a></li>
+                            <li><a href="who-we-ara.html">من نحن</a></li>
+                            <li><a href="blog.html">المدونة</a></li>
+                            <li><a href="contact-us.html">اتصل بنا</a></li>
                         </ul>
                     </div>
                 </div>
@@ -199,15 +199,15 @@
                         <h4>خدماتنا</h4>
                         <div class="d-md-flex gap-3">
                             <ul>
-                                <li><a href="">الاستشارات والحلول الإدارية والمالية</a></li>
-                                <li><a href="">الاستشارات والحلول القانونية</a></li>
-                                <li><a href="">استشارات الموارد البشرية</a></li>
-                                <li><a href="">الاستشارات والحلول التقنية</a></li>
+                                <li><a href="financial consulting.html">الاستشارات والحلول الإدارية والمالية</a></li>
+                                <li><a href="legal advice.html">الاستشارات والحلول القانونية</a></li>
+                                <li><a href="human consulting.html">استشارات الموارد البشرية</a></li>
+                                <li><a href="technical consulting.html">الاستشارات والحلول التقنية</a></li>
                             </ul>
                             <ul>
-                                <li><a href="">الاستشارات والحلول التسويقية</a></li>
-                                <li><a href="">الخدمات التسويقية</a></li>
-                                <li><a href="">خدمات التصميم والحملات الإعلانية</a></li>
+                                <li><a href="marketing consulting.html">الاستشارات والحلول التسويقية</a></li>
+                                <li><a href="marketing services.html">الخدمات التسويقية</a></li>
+                                <li><a href="advertising services.html">خدمات التصميم والحملات الإعلانية</a></li>
                             </ul>
                         </div>
                     </div>
