--- a/who-we-ara.html
+++ b/who-we-ara.html
@@ -8,8 +8,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <link rel="stylesheet" href="css/main.css">
-
     <title>سلسلة - من نحن</title>
 </head>
 
@@ -384,11 +384,13 @@
             </div>
         </div>
     </footer>
+
     <div class="copyRight">
         <p>جميع الحقوق محفوظة لشركة سلسلة 2023</p>
     </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
