--- a/technical consulting.html
+++ b/technical consulting.html
@@ -9,7 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-
+    <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - الاستشارات والحلول التقنية</title>
 </head>
 
@@ -342,6 +342,7 @@
     </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
